# gtk-particle-emitter-rs

./: Cargo.toml  README.md
editor/: Cargo.toml
editor/src/: main.rs  window.rs
editor/src/value_row/: interval.rs  mod.rs  spin_row.rs
examples/: hello.rs
gtk-particle-emitter/: Cargo.toml
gtk-particle-emitter/examples/: hello.rs
gtk-particle-emitter/src/: emitter.rs  helpers.rs  lib.rs
particle-emitter/: Cargo.toml
particle-emitter/src/: config.rs  lib.rs  particle.rs  particle_state.rs  spawn_area.rs  ticker.rs
src/: config.rs  emitter.rs  lib.rs  spawn_area.rs  ticker.rs
