[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.3.1", package = "libadwaita" }
gtk = { version = "0.6.4", package = "gtk4", features = ["blueprint"] }
particles = { path = "../gtk-particle-emitter", package = "gtk-particle-emitter"}
